# claude_code_mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  npx zcf.cmd  pyproject.toml  test_fastmcp_client.py  test_http_client.py  test_http_client_ip.py  test_listener.py  test_mcp_client.py  test_mcp_fastmcp.py  test_mcp_http_client.py  test_simple_speak.py  test_vision.py
dev/: CONVENTIONS.md  TEST_PLAN.md  TODO.md
examples/: README.md  academic_usage.py  claude_meta_usage.py  full_example.py  graphrag_usage.py  utils_usage.py  vision_usage.py
src/: simple_speak_server.py
src/academic/: README.md  __init__.py  __main__.py  scholar.py  scholar_class.py  types.py
src/academic/scholar/: README.md  __init__.py  extract_metadata.py  get_abstract.py  (+3 more)
src/audio/: __init__.py  __main__.py  listener.py  speaker.py  types.py
src/cc_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py  server_fastmcp.py
src/claude_meta/: README.md  __init__.py  __main__.py
src/core/: README.md  __init__.py
src/graphrag/: README.md  __init__.py  __main__.py  builder.py  builder_class.py  types.py
src/mcp/: README.md  __init__.py  __main__.py  cli.py  server.py
src/utils/: README.md  __init__.py  __main__.py  file_ops.py  json_ops.py  string_ops.py
src/vision/: README.md  __init__.py  __main__.py  analyzer.py  analyzer_class.py  types.py
test/: README.md  __init__.py  conftest.py  run.py
test/integration/: test_academic_full.py  test_claude_meta_full.py  test_graphrag_full.py  test_mcp_full.py  test_utils_full.py  test_vision_full.py
(+125 files in other folders)
